Update nightly package names for 4.3.1 tag
The 4-3-stable branch has been tagged upstream as 4.3.1, which changes
the name of the packages created.

--- a/docker/irods_clients_dev/ubuntu/22.04/Dockerfile
+++ b/docker/irods_clients_dev/ubuntu/22.04/Dockerfile
@@ -29,11 +29,11 @@ RUN curl -sSL https://packages.irods.org/irods-signing-key.asc | apt-key add - &
 ENV NIGHTLY_URL_BASE=https://github.com/wtsi-npg/irods_development_environment/releases/download/nightly/
 
 RUN curl -sSL \
-    -O ${NIGHTLY_URL_BASE}irods-dev_4.3.0-1.jammy_amd64.deb \
-    -O ${NIGHTLY_URL_BASE}irods-runtime_4.3.0-1.jammy_amd64.deb \
-    -O ${NIGHTLY_URL_BASE}irods-icommands_4.3.0-1.jammy_amd64.deb
+    -O ${NIGHTLY_URL_BASE}irods-dev_4.3.1-0.jammy_amd64.deb \
+    -O ${NIGHTLY_URL_BASE}irods-runtime_4.3.1-0.jammy_amd64.deb \
+    -O ${NIGHTLY_URL_BASE}irods-icommands_4.3.1-0.jammy_amd64.deb
 
-RUN ls -l && apt-get install -y ./*.deb
+RUN ls -l && apt-get update && apt-get install -y ./*.deb
 
 RUN apt-get update && \
     apt-get install -q -y --no-install-recommends \
