--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -13,7 +13,24 @@ jobs:
   release_variables:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        shell: bash -l -e -o pipefail {0}
+
     steps:
+      - name: "Checkout code"
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: "Fetch Tags"
+        # Workaround for https://github.com/actions/checkout/issues/290
+        run: |
+          # Avoid git exiting when Actions runs
+          git config --global --add safe.directory "$PWD"
+
+          git fetch --tags --force
+
       - name: "Get release variables"
         run: |
           echo 'RELEASE_VERSION='$(git describe --always --tags) >> $GITHUB_ENV
@@ -21,6 +38,7 @@ jobs:
 
     outputs:
       isRelease: ${{ github.sha == env.MASTER_SHA }}
+      releaseVersion: ${{ env.RELEASE_VERSION }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -107,12 +125,12 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: client_bundle
-        path: $BUNDLE_NAME
+        path: ${{ env.BUNDLE_NAME }}
 
   release:
     runs-on: ubuntu-latest
 
-    needs: bundle
+    needs: [release_variables, bundle]
 
     if: always()
 
@@ -121,18 +139,6 @@ jobs:
         shell: bash -l -e -o pipefail {0}
 
     steps:
-      - name: "Checkout code"
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: "Fetch Tags"
-        # Workaround for https://github.com/actions/checkout/issues/290
-        run: |
-          # Avoid git exiting when Actions runs
-          git config --global --add safe.directory "$PWD"
-
-          git fetch --tags --force
 
       - name: "Download artifact"
         uses: actions/download-artifact@v3
@@ -142,9 +148,12 @@ jobs:
       - name: "Create Release"
         uses: ncipollo/release-action@v1.12.0
         with:
-          name: ${{ env.RELEASE_VERSION }}
-          prerelease: ${{ !(github.sha == env.MASTER_SHA) }}
-          artifacts: BUNDLE_NAME
+          name: ${{ env.NAME }}
+          prerelease: ${{ env.PRERELEASE }}
+          artifacts: ${{ env.BUNDLE_NAME }}
           removeArtifacts: true
           artifactErrorsFailBuild: true
           generateReleaseNotes: true
+        env:
+          NAME: ${{ needs.release_variables.outputs.releaseVersion }}
+          PRERELEASE: ${{ !needs.release_variables.outputs.isRelease }}
