Add iRODS 4.3.2 and samtools 1.20

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -21,6 +21,7 @@ image_names += ub-18.04-irods-4.2.11
 image_names += ub-18.04-irods-4.2.12
 image_names += ub-18.04-irods-4.3.0
 image_names += ub-22.04-irods-4.3.1
+image_names += ub-22.04-irods-4.3.2
 image_names += ub-22.04-irods-4.3-nightly
 
 image_names += ub-16.04-irods-clients-dev-4.2.7
@@ -154,6 +155,20 @@ ub-22.04-irods-4.3.1.$(TAG): irods/ubuntu/22.04/Dockerfile ub-22.04-base.$(TAG)
 	--tag $(DOCKER_PREFIX)/ub-22.04-irods-4.3.1:$(TAG) --file $< ./irods
 	touch $@
 
+ub-22.04-irods-4.3.2.$(TAG): irods/ubuntu/22.04/Dockerfile ub-22.04-base.$(TAG)
+	docker buildx build $(DOCKER_ARGS) \
+	--load \
+	--build-arg BASE_IMAGE=$(DOCKER_PREFIX)/ub-22.04-base \
+	--build-arg IRODS_VERSION=4.3.2 \
+	--label org.opencontainers.image.title="iRODS 4.3.2 server, Ubuntu 22.04" \
+	--label org.opencontainers.image.source=$(git_url) \
+	--label org.opencontainers.image.revision=$(git_commit) \
+	--label org.opencontainers.image.version=$(TAG) \
+	--label org.opencontainers.image.created=$(NOW) \
+	--tag $(DOCKER_PREFIX)/ub-22.04-irods-4.3.2:latest \
+	--tag $(DOCKER_PREFIX)/ub-22.04-irods-4.3.2:$(TAG) --file $< ./irods
+	touch $@
+
 ub-22.04-irods-4.3-nightly.$(TAG): irods/ubuntu/22.04/Dockerfile.nightly ub-22.04-base.$(TAG)
 	docker buildx build $(DOCKER_ARGS) \
 	--load \
@@ -177,9 +192,9 @@ ub-16.04-irods-clients-4.2.7.$(TAG): irods_clients/ubuntu/16.04/Dockerfile ub-16
 	--build-arg DOCKER_TAG=$(TAG) \
 	--build-arg IRODS_VERSION=4.2.7 \
 	--build-arg BATON_VERSION=4.2.1 \
-	--build-arg HTSLIB_VERSION=1.18 \
-	--build-arg SAMTOOLS_VERSION=1.18 \
-	--build-arg BCFTOOLS_VERSION=1.18 \
+	--build-arg HTSLIB_VERSION=1.20 \
+	--build-arg SAMTOOLS_VERSION=1.20 \
+	--build-arg BCFTOOLS_VERSION=1.20 \
 	--label org.opencontainers.image.title="iRODS 4.2.7 clients, Ubuntu 16.04" \
 	--label org.opencontainers.image.source=$(git_url) \
 	--label org.opencontainers.image.revision=$(git_commit) \
@@ -198,9 +213,9 @@ ub-18.04-irods-clients-4.2.11.$(TAG): irods_clients/ubuntu/18.04/Dockerfile ub-1
 	--build-arg DOCKER_TAG=$(TAG) \
 	--build-arg IRODS_VERSION=4.2.11 \
 	--build-arg BATON_VERSION=4.2.1 \
-	--build-arg HTSLIB_VERSION=1.18 \
-	--build-arg SAMTOOLS_VERSION=1.18 \
-	--build-arg BCFTOOLS_VERSION=1.18 \
+	--build-arg HTSLIB_VERSION=1.20 \
+	--build-arg SAMTOOLS_VERSION=1.20 \
+	--build-arg BCFTOOLS_VERSION=1.20 \
 	--label org.opencontainers.image.title="iRODS 4.2.11 clients, Ubuntu 18.04" \
 	--label org.opencontainers.image.source=$(git_url) \
 	--label org.opencontainers.image.revision=$(git_commit) \
@@ -220,9 +235,9 @@ ub-18.04-irods-clients-4.2.12.$(TAG): irods_clients/ubuntu/18.04/Dockerfile ub-1
 	--build-arg DOCKER_TAG=$(TAG) \
 	--build-arg IRODS_VERSION=4.2.12 \
 	--build-arg BATON_VERSION=4.2.1 \
-	--build-arg HTSLIB_VERSION=1.18 \
-	--build-arg SAMTOOLS_VERSION=1.18 \
-	--build-arg BCFTOOLS_VERSION=1.18 \
+	--build-arg HTSLIB_VERSION=1.20 \
+	--build-arg SAMTOOLS_VERSION=1.20 \
+	--build-arg BCFTOOLS_VERSION=1.20 \
 	--label org.opencontainers.image.title="iRODS 4.2.12 clients, Ubuntu 18.04" \
 	--label org.opencontainers.image.source=$(git_url) \
 	--label org.opencontainers.image.revision=$(git_commit) \
@@ -242,9 +257,9 @@ ub-22.04-irods-clients-4.3.1.$(TAG): irods_clients/ubuntu/22.04/Dockerfile
 	--build-arg DOCKER_TAG=$(TAG) \
 	--build-arg IRODS_VERSION=4.3.1 \
 	--build-arg BATON_VERSION=4.2.1 \
-	--build-arg HTSLIB_VERSION=1.18 \
-	--build-arg SAMTOOLS_VERSION=1.18 \
-	--build-arg BCFTOOLS_VERSION=1.18 \
+	--build-arg HTSLIB_VERSION=1.20 \
+	--build-arg SAMTOOLS_VERSION=1.20 \
+	--build-arg BCFTOOLS_VERSION=1.20 \
 	--label org.opencontainers.image.title="iRODS 4.3.1 clients, Ubuntu 22.04" \
 	--label org.opencontainers.image.source=$(git_url) \
 	--label org.opencontainers.image.revision=$(git_commit) \
@@ -252,6 +267,28 @@ ub-22.04-irods-clients-4.3.1.$(TAG): irods_clients/ubuntu/22.04/Dockerfile
 	--label org.opencontainers.image.created=$(NOW) \
 	--tag $(DOCKER_PREFIX)/ub-22.04-irods-clients-4.3.1:latest \
 	--tag $(DOCKER_PREFIX)/ub-22.04-irods-clients-4.3.1:$(TAG) --file $< ./irods_clients
+	touch $@
+
+ub-22.04-irods-clients-4.3.2.$(TAG): irods_clients/ubuntu/22.04/Dockerfile
+	docker buildx build $(DOCKER_ARGS) \
+	--load \
+	--build-context singularity=../singularity \
+	--build-arg DOCKER_PREFIX=$(DOCKER_PREFIX) \
+	--build-arg BASE_IMAGE=$(DOCKER_PREFIX)/ub-22.04-base \
+	--build-arg DOCKER_IMAGE=$(subst .$(TAG),,$@) \
+	--build-arg DOCKER_TAG=$(TAG) \
+	--build-arg IRODS_VERSION=4.3.2 \
+	--build-arg BATON_VERSION=4.2.1 \
+	--build-arg HTSLIB_VERSION=1.20 \
+	--build-arg SAMTOOLS_VERSION=1.20 \
+	--build-arg BCFTOOLS_VERSION=1.20 \
+	--label org.opencontainers.image.title="iRODS 4.3.2 clients, Ubuntu 22.04" \
+	--label org.opencontainers.image.source=$(git_url) \
+	--label org.opencontainers.image.revision=$(git_commit) \
+	--label org.opencontainers.image.version=$(TAG) \
+	--label org.opencontainers.image.created=$(NOW) \
+	--tag $(DOCKER_PREFIX)/ub-22.04-irods-clients-4.3.2:latest \
+	--tag $(DOCKER_PREFIX)/ub-22.04-irods-clients-4.3.2:$(TAG) --file $< ./irods_clients
 	touch $@
 
 ub-22.04-irods-clients-4.3-nightly.$(TAG): irods_clients/ubuntu/22.04/Dockerfile.nightly
@@ -264,9 +301,9 @@ ub-22.04-irods-clients-4.3-nightly.$(TAG): irods_clients/ubuntu/22.04/Dockerfile
 	--build-arg DOCKER_TAG=$(TAG) \
 	--build-arg IRODS_VERSION=4.3-nightly \
 	--build-arg BATON_VERSION=4.2.1 \
-	--build-arg HTSLIB_VERSION=1.18 \
-	--build-arg SAMTOOLS_VERSION=1.18 \
-	--build-arg BCFTOOLS_VERSION=1.18 \
+	--build-arg HTSLIB_VERSION=1.20 \
+	--build-arg SAMTOOLS_VERSION=1.20 \
+	--build-arg BCFTOOLS_VERSION=1.20 \
 	--label org.opencontainers.image.title="iRODS 4.3-nightly clients, Ubuntu 22.04" \
 	--label org.opencontainers.image.source=$(git_url) \
 	--label org.opencontainers.image.revision=$(git_commit) \
@@ -360,6 +397,24 @@ ub-22.04-irods-clients-dev-4.3.1.$(TAG): irods_clients_dev/ubuntu/22.04/Dockerfi
 	--label org.opencontainers.image.created=$(NOW) \
 	--tag $(DOCKER_PREFIX)/ub-22.04-irods-clients-dev-4.3.1:latest \
 	--tag $(DOCKER_PREFIX)/ub-22.04-irods-clients-dev-4.3.1:$(TAG) --file $< ./irods_clients_dev
+	touch $@
+
+ub-22.04-irods-clients-dev-4.3.2.$(TAG): irods_clients_dev/ubuntu/22.04/Dockerfile
+	docker buildx build $(DOCKER_ARGS) \
+	--load \
+	--build-context singularity=../singularity \
+	--build-arg DOCKER_PREFIX=$(DOCKER_PREFIX) \
+	--build-arg BASE_IMAGE=ubuntu:22.04 \
+	--build-arg IRODS_VERSION=4.3.2 \
+	--build-arg DOCKER_IMAGE=$(subst .$(TAG),,$@) \
+	--build-arg DOCKER_TAG=$(TAG) \
+	--label org.opencontainers.image.title="iRODS 4.3.2 client development, Ubuntu 22.04" \
+	--label org.opencontainers.image.source=$(git_url) \
+	--label org.opencontainers.image.revision=$(git_commit) \
+	--label org.opencontainers.image.version=$(TAG) \
+	--label org.opencontainers.image.created=$(NOW) \
+	--tag $(DOCKER_PREFIX)/ub-22.04-irods-clients-dev-4.3.2:latest \
+	--tag $(DOCKER_PREFIX)/ub-22.04-irods-clients-dev-4.3.2:$(TAG) --file $< ./irods_clients_dev
 	touch $@
 
 ub-22.04-irods-clients-dev-4.3-nightly.$(TAG): irods_clients_dev/ubuntu/22.04/Dockerfile.nightly
