--- a/docker/irods/ubuntu/16.04/Dockerfile
+++ b/docker/irods/ubuntu/16.04/Dockerfile
@@ -39,8 +39,7 @@ RUN curl -sSL https://packages.irods.org/irods-signing-key.asc | apt-key add - &
     irods-server="$IRODS_VERSION" \
     irods-runtime="$IRODS_VERSION" \
     irods-database-plugin-postgres="$IRODS_VERSION" \
-    irods-icommands="$IRODS_VERSION" \
-    irods-dev="$IRODS_VERSION" && \
+    irods-icommands="$IRODS_VERSION" && \
     apt-get install -q -y -f && \
     unattended-upgrade -v && \
     apt-get remove -q -y unattended-upgrades && \
