Add iRODS 4.3.3 and remove iRODS 4.3.0
4.3.3 is the latest release, while 4.3.0 is has broken C API headers,
so is not usable by us.

--- a/docker/irods/ubuntu/22.04/Dockerfile
+++ b/docker/irods/ubuntu/22.04/Dockerfile
@@ -6,14 +6,15 @@ ARG IRODS_VERSION="4.3.1"
 # This is the Debian package revision number
 ARG IRODS_REVISION="0"
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 WORKDIR /opt/docker/irods
 
 COPY ./scripts/*.sh ./scripts/
 COPY ./config/* ./config/
 COPY ./patches/* ./patches/
 
-RUN echo "debconf debconf/frontend select Noninteractive" | debconf-set-selections && \
-    apt-get update && \
+RUN apt-get update && \
     apt-get install -q -y --no-install-recommends \
     apt-utils \
     ca-certificates \
@@ -33,7 +34,8 @@ RUN echo "debconf debconf/frontend select Noninteractive" | debconf-set-selectio
 
 ENV LANG=en_GB.UTF-8 \
     LANGUAGE=en_GB \
-    LC_ALL=en_GB.UTF-8
+    LC_ALL=en_GB.UTF-8 \
+    TZ=/Etc/UTC
 
 RUN curl -sSL https://packages.irods.org/irods-signing-key.asc | apt-key add - && \
     echo "deb [arch=amd64] https://packages.irods.org/apt $(lsb_release -sc) main" | \
