--- a/docker/irods_clients_dev/ubuntu/22.04/Dockerfile
+++ b/docker/irods_clients_dev/ubuntu/22.04/Dockerfile
@@ -6,10 +6,11 @@ ARG IRODS_VERSION="4.3.1"
 # The Debian package revision number
 ARG IRODS_REVISION="0"
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 COPY . /opt/docker/irods_clients_dev
 
-RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections && \
-    apt-get update && \
+RUN apt-get update && \
     apt-get install -q -y --no-install-recommends \
     apt-utils \
     ca-certificates \
@@ -24,7 +25,8 @@ RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selectio
 
 ENV LANG=en_GB.UTF-8 \
     LANGUAGE=en_GB \
-    LC_ALL=en_GB.UTF-8
+    LC_ALL=en_GB.UTF-8 \
+    TZ=/Etc/UTC
 
 RUN curl -sSL https://packages.irods.org/irods-signing-key.asc | apt-key add - && \
     echo "deb [arch=amd64] https://packages.irods.org/apt/ $(lsb_release -sc) main" |\
