--- a/docker/irods/ubuntu/22.04/Dockerfile.nightly
+++ b/docker/irods/ubuntu/22.04/Dockerfile.nightly
@@ -3,14 +3,15 @@ FROM $BASE_IMAGE
 
 ARG IRODS_VERSION="nightly"
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 WORKDIR /opt/docker/irods
 
 COPY ./scripts/*.sh ./scripts/
 COPY ./config/* ./config/
 COPY ./patches/* ./patches/
 
-RUN echo "debconf debconf/frontend select Noninteractive" | debconf-set-selections && \
-    apt-get update && \
+RUN apt-get update && \
     apt-get install -q -y --no-install-recommends \
     apt-utils \
     ca-certificates \
